# tpm-rs

./: .gitignore  Cargo.toml
crates/tpm2-rs-base/src/: commands.rs  prelude.rs  tests.rs  types.rs
crates/tpm2-rs-base/src/commands/: get_capability.rs  pcr_read.rs  startup.rs
crates/tpm2-rs-base/src/types/: tpm2b.rs  tpma.rs  tpml.rs  tpms.rs  tpmt.rs
crates/tpm2-rs-client/: Cargo.toml  README.md  compose.yaml
crates/tpm2-rs-client-feature/: Cargo.toml  README.md
crates/tpm2-rs-client-feature/src/: tests.rs
crates/tpm2-rs-client/src/: client.rs  connection.rs  prelude.rs  sessions.rs
crates/tpm2-rs-client/tests/: simulator_tests.rs
crates/tpm2-rs-errors/src/: lib.rs  prelude.rs  tss.rs
crates/tpm2-rs-marshal/: README.md
crates/tpm2-rs-marshal-derive/: README.md
crates/tpm2-rs-marshal-derive/src/: lib.rs  marshalable.rs  prelude.rs
crates/tpm2-rs-marshal/src/: lib.rs  tests.rs  traits.rs
crates/tpm2-rs-service/: README.md
crates/tpm2-rs-service/src/: service.rs
crates/tpm2-rs-unionify-derive/: README.md
crates/tpm2-rs-unionify-derive/src/: lib.rs
tpm2-rs-base/: Cargo.toml  README.md
tpm2-rs-base/src/: constants.rs  lib.rs  prelude.rs  tests.rs  types.rs
tpm2-rs-base/src/commands/: pcr_read.rs  startup.rs
tpm2-rs-base/src/types/: README.md  alg_property.rs  alg_rsa_scheme.rs  attest.rs  auth_response.rs  cc.rs  context_data.rs  creation_data.rs  data.rs  derive.rs  digest.rs  ecc_curve.rs  ecc_parameter.rs  ecc_parms.rs  ecc_point.rs  empty.rs  encrypted_secret.rs  event.rs  generated.rs  handle.rs  hc.rs  id_object.rs  kdf_scheme.rs  key_scheme_ecdh.rs  keyed_hash_scheme.rs  name.rs  nv_public.rs  pcr_selection.rs  public.rs  quote_info.rs  rh_hv_index.rs  rsa_scheme.rs  scheme_hmac.rs  sensitive.rs  sensitive_create.rs  sig_scheme_ecdaa.rs  sig_scheme_rsassa.rs  st_command_tag.rs  su.rs  sym_cipher_parms.rs  (+10 more)
tpm2-rs-client-feature/src/: lib.rs
tpm2-rs-client/src/: client.rs  lib.rs  prelude.rs
tpm2-rs-client/src/client/: tests.rs
tpm2-rs-client/tests/: simulator_tests.rs
tpm2-rs-client/tests/simulator_tests/: common.rs
tpm2-rs-errors/: README.md
tpm2-rs-errors/src/: tpm.rs
tpm2-rs-errors/src/tpm/: constants.rs  tpm_error.rs
tpm2-rs-errors/src/tss/: tss_error.rs
tpm2-rs-marshal-derive/src/marshalable/: struct.rs
tpm2-rs-marshal/src/: prelude.rs  tests.rs  types.rs
tpm2-rs-marshal/src/traits/: marshalable_enum.rs
tpm2-rs-marshal/src/types/: unmarshal_buf.rs
tpm2-rs-service/src/handler/: mod.rs
tpm2-rs-unionify/: README.md
(+193 files in other folders)
