[workspace]
resolver = "2"
members = [
    "tpm2-rs-base",
    "tpm2-rs-client",
    "tpm2-rs-errors",
    "tpm2-rs-client-feature",
    "tpm2-rs-marshal",
    "tpm2-rs-marshal-derive",
    "tpm2-rs-service",
    "tpm2-rs-unionify",
    "tpm2-rs-unionify-derive",
]

[workspace.dependencies]
# Third party dependencies
arrayvec = { version="0.7.4", default-features=false }
bitflags = "2.4.2"
hex-literal = { version = "0.4.1" }
mockall = "0.12.1"
open-enum = "0.4.1"
proc-macro2 = "1"
quote = "1"
syn = {version = "2", features = ["full"]}
trybuild = { version = "1.0.89", features = ["diff"] }
zerocopy = { version = "0.7.0", features = ["derive"] }

# Common workspace crates
tpm2-rs-base = { path = "tpm2-rs-base" }
tpm2-rs-client = { path = "tpm2-rs-client" }
tpm2-rs-errors = { path = "tpm2-rs-errors" }
tpm2-rs-features-client = { path = "tpm2-rs-client-feature" }
tpm2-rs-marshal = { path = "tpm2-rs-marshal" }
tpm2-rs-marshal-derive = { path = "tpm2-rs-marshal-derive" }
tpm2-rs-service = { path = "tpm2-rs-service" }
tpm2-rs-unionify = { path = "tpm2-rs-unionify" }
tpm2-rs-unionify-derive = { path = "tpm2-rs-unionify-derive" }
